--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #d35400;
+  background: #42affa;
   z-index: 100;
   display: flex;
   flex-direction: column;
@@ -25,6 +25,15 @@ body {
   text-align: center;
   transition: top linear 0.2s, bottom linear 0.2s;
   color: #fff;
+}
+
+#welcome img{
+  width:20%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #welcome p {
