--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: #42affa;
+  background: #191919;
   z-index: 100;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,8 @@ body {
   font-size: 4vmin;
   display: inline-block;
   border: 1px solid #fff;
-  padding: 2vmin 5vmin;
+  padding: 3vmin 5vmin;
+  margin: 1vmin 0;
   background: rgba(255, 255, 255, 0);
   transition: background linear 0.2s;
   cursor: pointer;
