--- a/assets/style.css
+++ b/assets/style.css
@@ -80,9 +80,9 @@ body {
   font-size: 20px;
 }
 
-#cells.items-12 .cell {
-  width: calc(100% / 4);
-  height: calc(100% / 3);
+#cells.items-2 .cell {
+  width: calc(100% / 2);
+  height: calc(100%);
 }
 
 .cell {
